Created another Folder for html Categories and fixed its file location in each page partially

--- a/HTML-CATEGORIES/glasswares.html
+++ b/HTML-CATEGORIES/glasswares.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomeKitchen Studio</title>
-    <link rel="stylesheet" href="CSS FOLDER/glasswares.css">
-    <link rel="stylesheet" href="CSS FOLDER/backtotop.css">
-    <link rel="stylesheet" href="CSS FOLDER/footer.css">
-    <link rel="stylesheet" href="CSS FOLDER/header.css">
-    <link rel="stylesheet" href="CSS FOLDER/universal&body.css">
+    <link rel="stylesheet" href="../CSS FOLDER/glasswares.css">
+    <link rel="stylesheet" href="../CSS FOLDER/backtotop.css">
+    <link rel="stylesheet" href="../CSS FOLDER/footer.css">
+    <link rel="stylesheet" href="../CSS FOLDER/header.css">
+    <link rel="stylesheet" href="../CSS FOLDER/universal&body.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-    <link rel="icon" type="image/png" href="images/official logo WHITE BG.jpg">
+    <link rel="icon" type="image/png" href="/images/official logo WHITE BG.jpg">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -24,8 +24,8 @@
     <section class="hero">
         <header id="mainHeader">
             <div id="headerContent">
-                <a href="index.html">
-                <img src="images/official logo TRANSPARTENT BG - CROPPED.png" alt="homekitchenstudio-official Logo" class="imgLogo">
+                <a href="../index.html">
+                <img src="../images/official logo TRANSPARTENT BG - CROPPED.png" alt="homekitchenstudio-official Logo" class="imgLogo">
                 </a>
 
                 <div class="searcher">
@@ -39,9 +39,9 @@
 
                 <nav class="signIn">
                     <ul>
-                        <li><a href="cart.html"> <i class="fa-solid fa-cart-shopping"></i>Cart</a></li>
-                        <li><a href="signIn.html"><i class="fa-regular fa-user"></i>Sign In</a></li>
-                        <li><a href="contactus.html"> <i class="fa-solid fa-phone"></i>Contact Us</a></li>
+                        <li><a href="../cart.html"> <i class="fa-solid fa-cart-shopping"></i>Cart</a></li>
+                        <li><a href="../signIn.html"><i class="fa-regular fa-user"></i>Sign In</a></li>
+                        <li><a href="../contactus.html"> <i class="fa-solid fa-phone"></i>Contact Us</a></li>
                     </ul>
                 </nav>
             </div>  
@@ -60,7 +60,7 @@
     </section>
 
         <section class="path">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <span> &gt;</span>
         <a href="glasswares.html">Glasswares</a>
     </section>
@@ -76,7 +76,7 @@
 
     <h2 class="mugsLabel" id="mugs">Mugs</h2>
     <section class="mugs">
-            <img src="images/Mugs Banner.jpg" alt="Mugs Banner">
+            <img src="../images/Mugs Banner.jpg" alt="Mugs Banner">
             <div class="mugsBannerLabel">
                 <p class="mugsP1">Designed for Daily Rituals</p>
                 <p class="mugsP2">Minimal ceramic mugs that bring comfort and style to your table.</p>
@@ -85,61 +85,61 @@
 
     <section class="mugGroup">
         <figure>
-            <img src="images/Glasswares-Mugs-1-Soft Floral Ceramic Mug.png" alt="Soft Floral Ceramic Mug">
+            <img src="../images/Glasswares-Mugs-1-Soft Floral Ceramic Mug.png" alt="Soft Floral Ceramic Mug">
             <figcaption class="imgLabelf">Soft Floral Ceramic Mug</figcaption>
             <p class="price">₱145.00</p>
         </figure>
 
         <figure>
-            <img src="images/Glasswares-Mugs-2-Blush Pink Ceramic Mug.png" alt="Blush Pink Ceramic Mug">
+            <img src="../images/Glasswares-Mugs-2-Blush Pink Ceramic Mug.png" alt="Blush Pink Ceramic Mug">
             <figcaption class="imgLabelf">Blush Pink Ceramic Mug</figcaption>
             <p class="price">₱110.00</p>
         </figure>
 
         <figure>
-            <img src="images/Glasswares-Mugs-3-White Ceramic Mug with Puppy Print.png" alt="White Ceramic Mug with Puppy Print">
+            <img src="../images/Glasswares-Mugs-3-White Ceramic Mug with Puppy Print.png" alt="White Ceramic Mug with Puppy Print">
             <figcaption class="imgLabelf">Puppy Print Ceramic Mug</figcaption>
             <p class="price">₱125.00</p>
         </figure>
 
         <figure>
-            <img src="images/Glasswares-Mugs-4-Neutral Rainbow Design Ceramic Mug.png" alt="Neutral Rainbow Design Ceramic Mug" height="237">
+            <img src="../images/Glasswares-Mugs-4-Neutral Rainbow Design Ceramic Mug.png" alt="Neutral Rainbow Design Ceramic Mug" height="237">
             <figcaption class="imgLabelf">Rainbow Design Ceramic Mug</figcaption>
             <p class="price">₱99.00</p>
         </figure>
 
         <figure>
-            <img src="images/Glasswares-Mugs-5-Deep Navy with Geometric Pattern Mug.png" alt="Deep Navy with Geometric Pattern Mug">
+            <img src="../images/Glasswares-Mugs-5-Deep Navy with Geometric Pattern Mug.png" alt="Deep Navy with Geometric Pattern Mug">
             <figcaption class="imgLabelf">Navy Geometric Pattern Mug</figcaption>
             <p class="price">₱105.00</p>
         </figure>
 
         <figure>
-            <img src="images/Glasswares-Mugs-6-Soft Botanical Mug.png" alt="Soft Botanical Mug">
+            <img src="../images/Glasswares-Mugs-6-Soft Botanical Mug.png" alt="Soft Botanical Mug">
             <figcaption class="imgLabelf">Soft Botanical Mug</figcaption>
             <p class="price">₱79.00</p>
         </figure>
 
         <figure>
-            <img src="images/Glasswares-Mugs-7-Warm Abstract Heart Mug.png" alt="Warm Abstract Heart Mug">
+            <img src="../images/Glasswares-Mugs-7-Warm Abstract Heart Mug.png" alt="Warm Abstract Heart Mug">
             <figcaption class="imgLabelf">Warm Abstract Heart Mug</figcaption>
             <p class="price">₱65.00</p>
         </figure>
 
         <figure>
-            <img src="images/Glasswares-Mugs-8-Embossed Leaf Texture Mug.png" alt="Embossed Leaf Texture Mug">
+            <img src="../images/Glasswares-Mugs-8-Embossed Leaf Texture Mug.png" alt="Embossed Leaf Texture Mug">
             <figcaption class="imgLabelf">Embossed Leaf Texture Mug</figcaption>
             <p class="price">₱70.00</p>
         </figure>
 
         <figure>
-            <img src="images/Glasswares-Mugs-9-Earthy Rainbow Mug.png" alt="Earthy Rainbow Mug">
+            <img src="../images/Glasswares-Mugs-9-Earthy Rainbow Mug.png" alt="Earthy Rainbow Mug">
             <figcaption class="imgLabelf">Earthy Rainbow Mug</figcaption>
             <p class="price">₱65.00</p>
         </figure>
 
         <figure>
-            <img src="images/Glasswares-Mugs-10-Golden Wave Accent Mug.png" alt="Golden Wave Accent Mug">
+            <img src="../images/Glasswares-Mugs-10-Golden Wave Accent Mug.png" alt="Golden Wave Accent Mug">
             <figcaption class="imgLabelf">Golden Wave Accent Mug</figcaption>
             <p class="price">₱60.00</p>
         </figure>
@@ -151,7 +151,7 @@
 
     <h2 class="wineglassLabel" id="wineGlass">Wine Glasses</h2>
     <section class="wineGlass">
-            <img src="images/Wine Glass Banner final.png" alt="Wine Glass Banner">
+            <img src="../images/Wine Glass Banner final.png" alt="Wine Glass Banner">
             <div class="wineglassBannerLabel">
                 <p class="wineglassP1">Designed for refined moments</p>
                 <p class="wineglassP2">Elegant glassware crafted for everyday dining and special occasions.</p>
@@ -160,61 +160,61 @@
 
     <section class="wineglassGroup">
         <figure>
-            <img src="images/glasswares-wine-1-Classic Short Stem Wine Glass.png" alt="Classic Short Stem Wine Glass">
+            <img src="../images/glasswares-wine-1-Classic Short Stem Wine Glass.png" alt="Classic Short Stem Wine Glass">
             <figcaption class="imgLabelf">Classic Short Stem Wine Glass</figcaption>
             <p class="price">₱185.00</p>
         </figure>
 
         <figure>
-            <img src="images/glasswares-wine-2-Classic Long Stem Wine Glass.png" alt="Classic Long Stem Wine Glass">
+            <img src="../images/glasswares-wine-2-Classic Long Stem Wine Glass.png" alt="Classic Long Stem Wine Glass">
             <figcaption class="imgLabelf">Classic Long Stem Wine Glass</figcaption>
             <p class="price">₱160.00</p>
         </figure>
 
         <figure>
-            <img src="images/glasswares-wine-3-Ribbed Flute Wine Glass.png" alt="Ribbed Flute Wine Glass">
+            <img src="../images/glasswares-wine-3-Ribbed Flute Wine Glass.png" alt="Ribbed Flute Wine Glass">
             <figcaption class="imgLabelf">Ribbed Flute Wine Glass</figcaption>
             <p class="price">₱155.00</p>
         </figure>
 
         <figure>
-            <img src="images/glasswares-wine-4-Elegant Ribbed Wine Glass.png" alt="Elegant Ribbed Wine Glass" height="237">
+            <img src="../images/glasswares-wine-4-Elegant Ribbed Wine Glass.png" alt="Elegant Ribbed Wine Glass" height="237">
             <figcaption class="imgLabelf">Rainbow Design Ceramic Mug</figcaption>
             <p class="price">₱159.00</p>
         </figure>
 
         <figure>
-            <img src="images/glasswares-wine-5-Opal Curve Wine Glass.png" alt="Opal Curve Wine Glass">
+            <img src="../images/glasswares-wine-5-Opal Curve Wine Glass.png" alt="Opal Curve Wine Glass">
             <figcaption class="imgLabelf">Opal Curve Wine Glass</figcaption>
             <p class="price">₱179.00</p>
         </figure>
 
         <figure>
-            <img src="images/glasswares-wine-6-Haven Table Wine Glass.png" alt="Haven Table Wine Glass">
+            <img src="../images/glasswares-wine-6-Haven Table Wine Glass.png" alt="Haven Table Wine Glass">
             <figcaption class="imgLabelf">Haven Table Wine Glass</figcaption>
             <p class="price">₱149.00</p>
         </figure>
 
         <figure>
-            <img src="images/glasswares-wine-7-New Moon Wine Glass.png" alt="New Moon Wine Glass">
+            <img src="../images/glasswares-wine-7-New Moon Wine Glass.png" alt="New Moon Wine Glass">
             <figcaption class="imgLabelf">New Moon Wine Glass</figcaption>
             <p class="price">₱155.00</p>
         </figure>
 
         <figure>
-            <img src="images/glasswares-wine-8-Champagne Flute Wine Glass.png" alt="Champagne Flute Wine Glass">
+            <img src="../images/glasswares-wine-8-Champagne Flute Wine Glass.png" alt="Champagne Flute Wine Glass">
             <figcaption class="imgLabelf">Champagne Flute Wine Glass</figcaption>
             <p class="price">₱140.00</p>
         </figure>
 
         <figure>
-            <img src="images/glasswares-wine-9-Crystal Wine Glass.png" alt="Crystal Wine Glass">
+            <img src="../images/glasswares-wine-9-Crystal Wine Glass.png" alt="Crystal Wine Glass">
             <figcaption class="imgLabelf">Crystal Wine Glass</figcaption>
             <p class="price">₱165.00</p>
         </figure>
 
         <figure>
-            <img src="images/glasswares-wine-10-Modern Bloom Wine Glass.png" alt="Modern Bloom Wine Glass">
+            <img src="../images/glasswares-wine-10-Modern Bloom Wine Glass.png" alt="Modern Bloom Wine Glass">
             <figcaption class="imgLabelf">Modern Bloom Wine Glass</figcaption>
             <p class="price">₱160.00</p>
         </figure>
@@ -243,7 +243,7 @@
 
     <div class="column1">
         <div class="bottomLogo">
-            <img src="images/official logo TRANSPARTENT BG - CROPPED.png" alt="">
+            <img src="../images/official logo TRANSPARTENT BG - CROPPED.png" alt="">
         </div>
 
         <div class="aboutPage">
@@ -310,42 +310,42 @@
         <h4>Payment Options</h4>
         <div class="row1-7">
                 <div class="cards">
-                    <a href="#"><img src="images/Payment-VISA-logo.jpg" alt="Visa Card Icon" aria-label="Visa"></a>
+                    <a href="#"><img src="../images/Payment-VISA-logo.jpg" alt="Visa Card Icon" aria-label="Visa"></a>
                 </div>
                 <div class="cards">
-                    <a href="#"><img src="images/Payment-Maya-logo.jpg" alt="Maya Card Icon" aria-label="Maya"></a>
+                    <a href="#"><img src="../images/Payment-Maya-logo.jpg" alt="Maya Card Icon" aria-label="Maya"></a>
                 </div>
                 <div class="cards">
-                    <a href="#"><img src="images/Payment-BPI-logo.jpg" alt="BPI Card Icon" aria-label="BPI"></a>
+                    <a href="#"><img src="../images/Payment-BPI-logo.jpg" alt="BPI Card Icon" aria-label="BPI"></a>
                 </div>
                 <div class="cards">
-                    <a href="#"><img src="images/Payment-BDO-logo.jpg" alt="BDO Card Icon" aria-label="BDO"></a>
+                    <a href="#"><img src="../images/Payment-BDO-logo.jpg" alt="BDO Card Icon" aria-label="BDO"></a>
                 </div>
                 <div class="cards">
-                    <a href="#"><img src="images/Payment-Mastercard-logo.webp" alt="Mastercard Icon" aria-label="Mastercard"></a>
+                    <a href="#"><img src="../images/Payment-Mastercard-logo.webp" alt="Mastercard Icon" aria-label="Mastercard"></a>
                 </div>
                 <div class="cards">
-                    <a href="#"><img src="images/Payment-Gcash-logo.webp" alt="Gcash Card Icon" aria-label="Gcash"></a>
+                    <a href="#"><img src="../images/Payment-Gcash-logo.webp" alt="Gcash Card Icon" aria-label="Gcash"></a>
                 </div>
         </div>
 
         <div class="row2-7">
             <h4>Follow Us</h4>
                 <div class="socialMedia">
-                    <a href="Facebook.com" aria-label="Facebook Link"><img src="images/fb logo.png" alt="fb logo"></a>
-                    <a href="Twitter.com" aria-label="Twitter Link"><img src="images/twitter logo.png" alt="twitter logo"></a>
-                    <a href="Instagram.com" aria-label="Instagram Link"><img src="images/instagram logo.png" alt="Instagram Logo"></a>
-                    <a href="LinkedIn.com" aria-label="LinkedIn Link"><img src="images/linkedin logo.png" alt="LinkedIn logo"></a>
+                    <a href="Facebook.com" aria-label="Facebook Link"><img src="../images/fb logo.png" alt="fb logo"></a>
+                    <a href="Twitter.com" aria-label="Twitter Link"><img src="../images/twitter logo.png" alt="twitter logo"></a>
+                    <a href="Instagram.com" aria-label="Instagram Link"><img src="../images/instagram logo.png" alt="Instagram Logo"></a>
+                    <a href="LinkedIn.com" aria-label="LinkedIn Link"><img src="../images/linkedin logo.png" alt="LinkedIn logo"></a>
                 </div>
         </div>
 
         <div class="row3-7">
             <h4>Shipping Courriers</h4>
                 <div class="shipping">
-                    <a href="flashexpress.ph" aria-label="Flash Express Link"><img src="images/Delivery-FlashExpress.png" alt="fb logo"></a>
-                    <a href="FedEx.com" aria-label="FedEx Link"><img src="images/Delivery-FedEx.png" alt="twitter logo"></a>
-                    <a href="Ninjavan.co" aria-label="Ninja Van Link"><img src="images/Delivery-NinjaVan.png" alt="Instagram Logo"></a>
-                    <a href="lbcexpress.com" aria-label="LBC Express Link"><img src="images/Deliver-LBCExpress.png" alt="LinkedIn logo"></a>
+                    <a href="flashexpress.ph" aria-label="Flash Express Link"><img src="../images/Delivery-FlashExpress.png" alt="fb logo"></a>
+                    <a href="FedEx.com" aria-label="FedEx Link"><img src="../images/Delivery-FedEx.png" alt="twitter logo"></a>
+                    <a href="Ninjavan.co" aria-label="Ninja Van Link"><img src="../images/Delivery-NinjaVan.png" alt="Instagram Logo"></a>
+                    <a href="lbcexpress.com" aria-label="LBC Express Link"><img src="../images/Deliver-LBCExpress.png" alt="LinkedIn logo"></a>
                 </div>
         </div>
 
