--- a/HTML-CATEGORIES/utensils.html
+++ b/HTML-CATEGORIES/utensils.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomeKitchen Studio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../CSS FOLDER/header.css">
+    <link rel="stylesheet" href="../CSS FOLDER/universal&body.css">
+    <link rel="stylesheet" href="../CSS FOLDER/footer.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -20,8 +22,8 @@
     <section class="hero">
         <header id="mainHeader">
             <div id="headerContent">
-                <a href="index.html">
-                <img src="images/official logo TRANSPARTENT BG - CROPPED.png" alt="homekitchenstudio-official Logo" class="imgLogo">
+                <a href="../index.html">
+                <img src="../images/official logo TRANSPARTENT BG - CROPPED.png" alt="homekitchenstudio-official Logo" class="imgLogo">
                 </a>
 
                 <div class="searcher">
@@ -35,9 +37,9 @@
 
                 <nav class="signIn">
                     <ul>
-                        <li><a href="cart.html"> <i class="fa-solid fa-cart-shopping"></i>Cart</a></li>
-                        <li><a href="signIn.html"><i class="fa-regular fa-user"></i>Sign In</a></li>
-                        <li><a href="contactus.html"> <i class="fa-solid fa-phone"></i>Contact Us</a></li>
+                        <li><a href="../cart.html"> <i class="fa-solid fa-cart-shopping"></i>Cart</a></li>
+                        <li><a href="../signIn.html"><i class="fa-regular fa-user"></i>Sign In</a></li>
+                        <li><a href="../contactus.html"> <i class="fa-solid fa-phone"></i>Contact Us</a></li>
                     </ul>
                 </nav>
             </div>  
@@ -56,11 +58,12 @@
     </section>
 
     <section class="path">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <span> &gt;</span>
         <a href="utensils.html">Utensils</a>
     </section>
 
+    <h2>utensils</h2>
     <script src="script.js"></script>
 </body>
 </html>
