--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
             </div>  
 
             <nav class="categories">
-                <li><a href="utensils.html">Utensils</a></li>
-                <li><a href="glasswares.html">GlassWares</a></li>
-                <li><a href="cookwares.html">Cookwares</a></li>
-                <li><a href="knives.html">Knives</a></li>
-                <li><a href="storage.html">Storage</a></li>
-                <li><a href="bakingtools.html">Baking Tools</a></li>
-                <li><a href="kitchenappliances.html">Kitchen Appliances</a></li>
-                <li><a href="accessories.html">Accessories</a></li>
+                <li><a href="HTML-CATEGORIES/utensils.html">Utensils</a></li>
+                <li><a href="HTML-CATEGORIES/glasswares.html">GlassWares</a></li>
+                <li><a href="HTML-CATEGORIES/cookwares.html">Cookwares</a></li>
+                <li><a href="HTML-CATEGORIES/knives.html">Knives</a></li>
+                <li><a href="HTML-CATEGORIES/storage.html">Storage</a></li>
+                <li><a href="HTML-CATEGORIES/bakingtools.html">Baking Tools</a></li>
+                <li><a href="HTML-CATEGORIES/kitchenappliances.html">Kitchen Appliances</a></li>
+                <li><a href="HTML-CATEGORIES/accessories.html">Accessories</a></li>
             </nav>
         </header>
 
@@ -340,5 +340,6 @@
 </div>
 
     <script src="JS FOLDER/main.js"></script>
+    <script src="JS FOLDER/backtotop.js"></script>
 </body>
 </html>
