added JS for add to cart and added badge on main page

--- a/HTML-CATEGORIES/glasswares.html
+++ b/HTML-CATEGORIES/glasswares.html
@@ -374,6 +374,6 @@
     <p><a href="#headerContent">▲ Back To Top</a></p>
 </div>
 
-    <script src="JS FOLDER/backtotop.js"></script>
+    <script src="../JS FOLDER/backtotop.js"></script>
 </body>
 </html>
