--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <nav class="signIn">
                     <ul>
-                        <li id="cartIcon"><a href="cart.html"> <i class="fa-solid fa-cart-shopping"></i>Cart</a></li>
+                        <li id="cartIcon"><a href="cart.html"> <i class="fa-solid fa-cart-shopping"></i>Cart</a></li><span id="cartNumber">0</span>
                         <li><a href="signin.html"><i class="fa-regular fa-user"></i>Sign In</a></li>
                         <li><a href="contactus.html"> <i class="fa-solid fa-phone"></i>Contact Us</a></li>
                     </ul>
@@ -341,5 +341,6 @@
 
     <script src="JS FOLDER/main.js"></script>
     <script src="JS FOLDER/backtotop.js"></script>
+    <script src="JS FOLDER/cartNumber.js"></script>
 </body>
 </html>
