added Utensils Content including HTML and images

--- a/index.html
+++ b/index.html
@@ -133,21 +133,25 @@
 
 </section>
 
-    <h2 class="h2">Collections</h2>
+    <h2 class="h2">Kitchenware Set</h2>
 <section class="section2">
 
 <div class="collection">
 <div class="collectionEach">
+    <a href="SETkitchenappliances.html" target="_blank">
     <figure>
         <img src="images/Collections-1-Kitchen Appliances.png" alt="Kitchen Appliances">
         <figcaption class="imgLabel">Kitchen Appliances</figcaption>
     </figure>
+    </a>
 </div>
 <div class="collectionEach">
+    <a href="SETWoodenCutlery.html">
     <figure>
         <img src="images/Collections-2-Wooden Cutlery.png" alt="Wooden Cutlery">
         <figcaption class="imgLabel">Wooden Cutlery</figcaption>
     </figure>
+    </a>
 </div>
 <div class="collectionEach">
     <figure>
@@ -213,7 +217,7 @@
         </div>
 
         <div class="aboutPage">
-            <p class="aboutPageP">This website was built as a portfolio project to practice and demonstrate skills in HTML, CSS, JavaScript, and responsive webdesign.HomeKitchen Studio is not a real store, but a concept project inspired by modern e-commerce platforms and kitchen lifestyle brands. <br><br>
+            <p class="aboutPageP">This website was built as a portfolio project to practice and demonstrate skills in HTML, CSS, JavaScript, and responsive webdesign.HomeKitchen Studio is not a real store, but a concept project inspired by modern e-commerce platforms and kitchen lifestyle brands. All products and images are for demonstration purposes only.<br><br>
 
             <a href="#" class="Explore">Explore the Build</a>
         </div>
