--- a/cart.html
+++ b/cart.html
@@ -59,6 +59,9 @@
         <h1>This is Cart Page</h1>
     </div>
 
+    <div id="cartItems"></div>
+
     <script src="script.js"></script>
+    <script src="cart.js"></script>
 </body>
 </html>
