--- a/signIn.html
+++ b/signIn.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomeKitchen Studio</title>
     <link rel="stylesheet" href="CSS FOLDER/signin.css">
+    <link rel="stylesheet" href="CSS FOLDER/header.css">
+    <link rel="stylesheet" href="CSS FOLDER/universal&body.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
